2008-07-24  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/enriched.el (enriched-mode-map): Bind C-a and C-j via
	key remapping, not directly.

2008-07-24  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: New version 11.2.
	(whitespace-newline-mode, global-whitespace-newline-mode): New newline
	minor mode visualization.

2008-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/cc-mode.el (auto-mode-alist): Add .i and .ii files.

	* Makefile.in (ELCFILES): Add term/common-win.elc.

	* vc-dir.el (vc-dir-search, vc-dir-isearch)
	(vc-dir-isearch-regexp): New functions.
	(vc-dir-mode-map, vc-dir-menu-map): Bind them.

2008-07-23  Juri Linkov  <juri@jurta.org>

	* isearch-multi.el: Remove file to avoid dos file name clashes
	with isearch-x.el.  Move most content to isearch-multi.el.

	* misearch.el: New file with most content from isearch-multi.el.
	Rename `isearch-buffers' name prefixes to `multi-isearch'.
	Remove `isearch-buffers-minor-mode'.  Add new function
	`multi-isearch-setup' to `isearch-mode-hook'.  New top-level
	commands `multi-isearch-buffers', `multi-isearch-buffers-regexp',
	`multi-isearch-files', `multi-isearch-files-regexp'.

	* Makefile.in (ELCFILES): Remove isearch-multi.elc.  Add misearch.elc.

	* isearch.el (isearch-message-prefix): Display "Multi" when
	`multi-isearch-next-buffer-current-function' is non-nil.
	(isearch-search-string): Replace `isearch-buffers-next-buffer-function'
	with `multi-isearch-next-buffer-current-function', and
	`isearch-buffers-current-buffer' with `multi-isearch-current-buffer'.

	* add-log.el (change-log-mode): Set `change-log-next-buffer' to
	`multi-isearch-next-buffer-function' instead of
	`isearch-buffers-next-buffer-function'.  Remove call to
	`isearch-buffers-minor-mode'.

	* buff-menu.el (Buffer-menu-marked-buffers)
	(Buffer-menu-isearch-buffers)
	(Buffer-menu-isearch-buffers-regexp): New functions.
	(Buffer-menu-mode-map): Bind "M-s a C-s" to